# Access-Key-Manager

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
KeyManager/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
core/: models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
core/management/commands/: createmicroadmin.py
core/migrations/: 0001_initial.py  0002_remove_school_username.py  0003_alter_accesskey_revoked_at.py  0004_school_username.py
core/templates/core/: index.html
core/tests/: conftest.py  test_access_keys.py
